# mud

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURE_BACKLOG.md  ISSUES.md  LICENSE.md  PLAN.md  README.md  common_issues.md  shell.nix
assets/: overworld_old.yaml.bak
assets/building_presets/: stone.yaml
assets/dialogs/: _system_vars.yarn  chatterbox.yarn  demo_villager.yarn
assets/loadouts/: starter.yaml
assets/maps/: dupa4.yaml  island.yaml  overworld.yaml  starter_cellar.yaml  underworld.yaml
assets/object_bases/: consumable.yaml  corpse.yaml  ground_tile.yaml  movable_obstacle.yaml  npc.yaml  obstacle.yaml  pickup.yaml  pouch.yaml  static_world.yaml
assets/quests/: hunter.py
assets/recipes/: bolt_from_arrows.yaml  flower_mana_potion.yaml  mushroom_brew.yaml
assets/schemas/: map_layout.schema.json  object_definition.schema.json  spell_definition.schema.json
assets/shaders/: darkness_overlay.wgsl  fog_of_war.wgsl
assets/spells/: befuddle.yaml  bless.yaml  cure_wounds.yaml  empower_weapon.yaml  fireball.yaml  fireball_minor.yaml  firewall.yaml  flame_weapon.yaml  frost_bolt.yaml  frost_lance.yaml  glimmer.yaml  goblin_heal.yaml  immolation.yaml  lesser_heal.yaml  light.yaml  magic_dart.yaml  paralysis.yaml  restore.yaml  shield.yaml  sleep.yaml  slow.yaml  spark_bolt.yaml  swiftness.yaml  venom.yaml
assets/templates/: apples.yaml  trawka.yaml
crates/bevy_terminal/: Cargo.toml
docs/: content_bible.md  movement_perf_investigation.md  progression.md  skills_locks_social_plan.md  stacked_floors_plan.md  yaml_formats.md
docs/modules/: AUTHORING_GUIDE.md
packaging/: build-appimage.sh
packaging/appimage/: AppRun  mud2.desktop
saves/: world-state.json
scripts/: gen_attack_cursor.py  gen_barrel_sprite.py  gen_bear_trap_sprites.py  gen_blazing_fire_sheet.py  gen_book_sprite.py  gen_campfire_sheet.py  gen_casting_item_sprites.py  gen_cave_wall_sprite.py  gen_cobblestone_sprite.py  gen_coin_sprites.py  gen_combat_gear_sprites.py  gen_cyclops_sheet.py  gen_damage_hit_vfx.py  gen_dirt_path_sprite.py  gen_fence_sprite.py  gen_fire_elemental_sheet.py  gen_gathering_sprites.py  gen_generic_corpse_sprite.py  gen_goblin_mage_sheet.py  gen_goblin_sheet.py  gen_hud_indicator_icons.py  gen_iron_chest_sprites.py  gen_lever_sprites.py  gen_mill_ghost_sheet.py  gen_moonshade_grain_sprite.py  gen_overworld_v2_map.py  gen_pen_sprite.py  gen_player_sheet.py  gen_poison_flask_sprite.py  gen_pouch_sprites.py  gen_ranged_assets.py  gen_rat_sheet.py  gen_sand_sprite.py  gen_side_wall_sprite.py  gen_sign_post_sprite.py  gen_skeleton_sheet.py  gen_stair_sprites.py  gen_stone_step_sprite.py  gen_threat_dot_icons.py  gen_tombstone_sprite.py  (+12 more)
scripts/object_grids/: README.md  grids.ipynb
src/: lib.rs  main.rs
src/accounts/: autosave.rs  db.rs  hashing.rs  mod.rs  resources.rs
src/app/: about_screen.rs  asset_sync_screen.rs  auth_screen.rs  character_create_screen.rs  character_select_screen.rs  clean_cache.rs  mod.rs  paths.rs  plugin.rs  state.rs  title_screen.rs
src/asset_viewer/: mod.rs  plugin.rs  reload.rs  resources.rs  systems.rs  watcher.rs
src/assets/: mod.rs
src/client_effects/: mod.rs  projectile.rs  speech_bubble.rs  vfx.rs  vfx_attachment.rs
src/combat/: components.rs  damage.rs  damage_expr.rs  damage_type.rs  formulas.rs  mod.rs  modifiers.rs  npc_casting.rs  resources.rs  systems.rs
src/crafting/: learning.rs  mod.rs  recipes.rs  stash.rs  systems.rs
src/diagnostics/: mod.rs
src/dialog/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs  variable_storage.rs  yarn_bindings.rs
src/editor/: building.rs  clipboard.rs  dialog_index.rs  fill.rs  floor_render.rs  floors_editor.rs  hotkeys.rs  mod.rs  plugin.rs  resources.rs  selection.rs  serializer.rs  status_bar.rs  systems.rs  templates.rs  undo.rs
src/floor_viewer/: mod.rs  plugin.rs  render.rs  ui.rs
src/game/: chat.rs  commands.rs  currency.rs  discovery.rs  helpers.rs  mod.rs  projection.rs  resources.rs  shop.rs  systems.rs  trade.rs  traversal.rs
src/log/: commands.rs  mod.rs  plugin.rs
src/magic/: effects.rs  glimmer.rs  mod.rs  resources.rs
src/network/: admin.rs  asset_sync.rs  mod.rs  protocol.rs  resources.rs  systems.rs  transport.rs
src/npc/: components.rs  mod.rs  spawn_groups.rs  spellcasting.rs  systems.rs
src/persistence/: mod.rs
src/player/: admin_progression.rs  classes.rs  components.rs  lifecycle.rs  loadout.rs  mod.rs  progression.rs  regen.rs  setup.rs  skills.rs  systems.rs
src/quest/: engine.rs  events.rs  mod.rs  plugin.rs  python.rs  systems.rs
src/scripting/: admin_host.rs  mod.rs  python.rs  resources.rs  systems.rs
src/scripting_api/: bindings.rs  build.rs  mod.rs  (+1 more)
tests/: admin_repl.rs  multiplayer_transport.rs
(+259 files in other folders)
