[package]
name = "mud2"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "debug"] }
rustpython = "0.4"
rustpython-vm = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", optional = true }

[features]
gen-schemas = ["schemars"]

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"
required-features = ["gen-schemas"]
