[package]
name = "mud2"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "debug"] }
bevy_yarnspinner = "0.8"
rustpython = "0.4"
rustpython-vm = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", optional = true }
sha2 = "0.10"
dirs = "5"
base64 = "0.22"

# Account persistence — version matched to rustpython-stdlib's libsqlite3-sys
# (links="sqlite3" can only appear once in the dep graph).
rusqlite = "0.31"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"], optional = true }

[features]
gen-schemas = ["schemars"]
dev-self-signed = ["rcgen"]

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"
required-features = ["gen-schemas"]

[[bin]]
name = "asset_viewer"
path = "src/bin/asset_viewer.rs"
