[workspace]
members = [".", "crates/bevy_terminal"]
resolver = "2"

[package]
name = "mud2"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18" }
bevy_terminal = { path = "crates/bevy_terminal" }
bevy_yarnspinner = "0.8"
# Only needed for `VariableStorageError`, which bevy_yarnspinner re-exports
# as `pub(crate)`. The actual trait lives in `yarnspinner::runtime`.
yarnspinner = "0.8"
rustpython = "0.4"
rustpython-vm = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", optional = true }
sha2 = "0.10"
dirs = "5"
base64 = "0.22"

# Account persistence — version matched to rustpython-stdlib's libsqlite3-sys
# (links="sqlite3" can only appear once in the dep graph).
rusqlite = "0.31"
# Pulled in transitively by rusqlite *and* rustpython-stdlib; declared here so we
# can flip on `bundled` for the whole graph, statically linking sqlite into the
# binary instead of relying on a system libsqlite3. Version must match what
# rusqlite/rustpython resolve to (see Cargo.lock).
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"], optional = true }

[features]
default = ["dynamic_linking"]
# Bevy's hot-reload-friendly dynamic linking. Great for `cargo run` iteration
# (cuts incremental link times from seconds to ~0); must be OFF for release
# builds, otherwise the binary needs `libbevy_dylib.so` next to it at runtime.
# Drop with `cargo build --release --no-default-features`.
dynamic_linking = ["bevy/dynamic_linking"]
gen-schemas = ["schemars"]
dev-self-signed = ["rcgen"]
# Build with `--features profiling` to capture a per-system Chrome trace at
# runtime. On exit, Bevy writes `trace-{timestamp}.json` to CWD; open in
# https://ui.perfetto.dev/ or chrome://tracing. Off by default — the chrome
# layer adds nontrivial per-span overhead.
profiling = ["bevy/trace_chrome"]
# Build with `--features tracy` to expose Bevy's tracing spans to a Tracy
# client. Run `tracy` (GUI) or `tracy-capture -o file.tracy` before launching
# the game. Bevy 0.18.1 pulls tracing-tracy 0.11.x; the capture client
# version must match. Mutually exclusive with `profiling` — different
# subscribers, only one tracing layer at a time. See
# docs/movement_perf_investigation.md "Round 2 — Tracy" for usage.
tracy = ["bevy/trace_tracy"]
debug = ["bevy/debug"]

[[bin]]
name = "gen_schemas"
path = "src/bin/gen_schemas.rs"
required-features = ["gen-schemas"]

[[bin]]
name = "asset_viewer"
path = "src/bin/asset_viewer.rs"

[[bin]]
name = "floor_viewer"
path = "src/bin/floor_viewer.rs"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
